Update Minecraft blurb

--- a/src/documents/2013-04-22-openness/index.html.jade
+++ b/src/documents/2013-04-22-openness/index.html.jade
@@ -8,24 +8,24 @@ styles:
 
 section.chapter
   .in
-    .unit4
+    .unit6
       .content
         p "Openness" can mean many things in the english language: inviting, vast, empty, open-ended. For this study, I want to focus on openness in the sense of "vast", but also "open-ended".
 
 section.chapter
   .in
-    .unit4
+    .unit6
       header.header
         h1.title Journey
 
   .in
-    p.unit4 Journey is a long trek across an open desert to a mysterious mountain.
+    p.unit6 Journey is a long trek across an open desert to a mysterious mountain.
 
     p.unit12
       img(src="journey-game-screenshot-1.jpg", width=1280, height=720)
       img(src="journey-game-screenshot-3.jpg", width=1280, height=720)
 
-    .unit4
+    .unit6
       p
         | Along the way, you may encounter other players. Your journey together
         | is mostly in silence. Sometimes you communicate through chirps.
@@ -40,7 +40,7 @@ section.chapter
 
 section.chapter
   .in
-    .unit4
+    .unit6
       .content
         blockquote.pullquote
           | Be conservative in what you do,
@@ -54,7 +54,7 @@ section.chapter
 
 section.chapter
   .in
-    header.unit4.header
+    header.unit6.header
       h1.title Starseed Pilgrim
 
       p
@@ -81,10 +81,20 @@ section.chapter
     header.unit4.header
       h1.title Minecraft
 
-    .unit12
+    p.unit12
       a(href="http://minecraftgallery.com/gallery/minecraft-beach-house-wallpaper/")
         img(src="minecraft-beach-house-wallpaper.jpg", width=1280, height=800)
       a(href="http://empireminecraft.com/threads/happy-valentines-day.21591/")
         img(src="6fylsex.jpg", width=1280, height=979)
       a(href="http://claw-of-the-dragon.deviantart.com/art/Enderdragon-329990024")
         img(src="enderdragon_by_claw_of_the_dragon-d5ggtxk.jpg", width=1280, height=800)
+
+    .unit6
+      p
+        | Minecraft is the quintissential example of how constriants create an
+        | explosion of creative collaboration.
+      p
+        | Minecraft's succcess lies in the principle of "limiting your API surface".
+        | Everything is made of blocks (even the player). That's the API.
+        | This constraint means everything is intercompatible, allowing players
+        | to do amazing things with the system that were never anticipated.
