--- a/src/documents/2013-04-22-openness/index.html.jade
+++ b/src/documents/2013-04-22-openness/index.html.jade
@@ -98,3 +98,13 @@ section.chapter
         | Everything is made of blocks (even the player). That's the API.
         | This constraint means everything is intercompatible, allowing players
         | to do amazing things with the system that were never anticipated.
+
+section.chapter
+  .in
+    .content
+      blockquote.pullquote Openness means constraining the right things.
+
+      p.unit6 
+        | You always have constraints. When you chose those constraints carefully
+        | you'll create an architecture of participation, allowing your product
+        | to grow in creative ways you can't anticipate.
