More slide-like

--- a/src/documents/2013-04-22-openness/index.html.jade
+++ b/src/documents/2013-04-22-openness/index.html.jade
@@ -102,7 +102,7 @@ section.chapter
 section.chapter
   .in
     .content
-      blockquote.pullquote Openness means constraining the right things.
+      blockquote.pullquote.unit12 Openness means constraining the right things.
 
       p.unit6 
         | You always have constraints. When you chose those constraints carefully
