--- a/src/documents/2013-04-22-openness/index.html.jade
+++ b/src/documents/2013-04-22-openness/index.html.jade
@@ -99,6 +99,12 @@ section.chapter
         | This constraint means everything is intercompatible, allowing players
         | to do amazing things with the system that were never anticipated.
 
+    .unit6
+      ul
+        li I want to leave a mark.
+        li No set story means people will make their own story.
+        li Give me constraints, and I'll feel compelled to find a way to tell my story.
+
 section.chapter
   .in
     .content
