Update openness essay

--- a/src/documents/2013-04-22-openness/index.html.jade
+++ b/src/documents/2013-04-22-openness/index.html.jade
@@ -2,8 +2,8 @@
 title: 'Openness: a moodboard'
 layout: 'default'
 styles:
-  - '/styles/basic.css'
-  - '/styles/chapters.css'
+  - '@site.url/styles/basic.css'
+  - '@site.url/styles/chapters.css'
 ---
 
 section.chapter
@@ -17,14 +17,15 @@ section.chapter
     .unit6
       header.header
         h1.title Journey
+      p Journey is a long trek across an open desert to a mysterious mountain.
+
+  .poster
+    img(src="journey-game-screenshot-1.jpg", width=1280, height=720)
+
+  .poster
+    img(src="journey-game-screenshot-3.jpg", width=1280, height=720)
 
   .in
-    p.unit6 Journey is a long trek across an open desert to a mysterious mountain.
-
-    p.unit12
-      img(src="journey-game-screenshot-1.jpg", width=1280, height=720)
-      img(src="journey-game-screenshot-3.jpg", width=1280, height=720)
-
     .unit6
       p
         | Along the way, you may encounter other players. Your journey together
@@ -33,9 +34,10 @@ section.chapter
         | By limiting the ways that players can communicate, Journey creates a
         | profound sense of companionship in this vast landscape.
 
+  .poster
+    img(src="journey-game-screenshot-4.jpg", width=1280, height=720)
 
-    p.unit12
-      img(src="journey-game-screenshot-4.jpg", width=1280, height=720)
+  .poster
       img(src="journey-game-screenshot-2.jpg", width=1280, height=720)
 
 section.chapter
@@ -78,17 +80,20 @@ section.chapter
 
 section.chapter
   .in
-    header.unit4.header
+    header.header
       h1.title Minecraft
 
-    p.unit12
-      a(href="http://minecraftgallery.com/gallery/minecraft-beach-house-wallpaper/")
-        img(src="minecraft-beach-house-wallpaper.jpg", width=1280, height=800)
-      a(href="http://empireminecraft.com/threads/happy-valentines-day.21591/")
-        img(src="6fylsex.jpg", width=1280, height=979)
-      a(href="http://claw-of-the-dragon.deviantart.com/art/Enderdragon-329990024")
-        img(src="enderdragon_by_claw_of_the_dragon-d5ggtxk.jpg", width=1280, height=800)
+  .poster
+    a(href="http://minecraftgallery.com/gallery/minecraft-beach-house-wallpaper/")
+      img(src="minecraft-beach-house-wallpaper.jpg", width=1280, height=800)
+  .poster
+    a(href="http://empireminecraft.com/threads/happy-valentines-day.21591/")
+      img(src="6fylsex.jpg", width=1280, height=979)
+  .poster
+    a(href="http://claw-of-the-dragon.deviantart.com/art/Enderdragon-329990024")
+      img(src="enderdragon_by_claw_of_the_dragon-d5ggtxk.jpg", width=1280, height=800)
 
+  .in
     .unit6
       p
         | Minecraft is the quintissential example of how constriants create an
